# marcketplace

./: README.md  pyproject.toml
megano/compare/: services.py
topline/: manage.py
topline/cart/: admin.py  cart.py  contexts_processors.py  forms.py  models.py  urls.py  views.py
topline/cart/migrations/: 0001_initial.py
topline/static/: staticfiles.json
topline/static/css/: admin.css
topline/store/: admin.py  apps.py  configs.py  contexts_processors.py  forms.py  mixins.py  models.py  settings.py  signals.py  urls.py  views.py
topline/store/migrations/: 0001_initial.py  0002_banner.py  0002_remove_product_banner_banner_product.py  0002_remove_product_banner_product_banner.py  0003_remove_banner_images_banner_product_and_more.py  0003_remove_product_banner_banner_product.py  0004_remove_banner_product_product_banner.py
topline/store/templatetags/: banners_tags.py
topline/templates/admin/: base.html  settings.html
topline/templates/banner/: banner_tpl_main.html
topline/templates/cart/: index.html
topline/templates/store/: product_detail.html  product_list.html
topline/topline/: asgi.py  settings.py  urls.py  wsgi.py
topline/users/: admin.py  apps.py  models.py
topline/users/migrations/: 0001_initial.py
