[tool.poetry]
name = "топлайн"
version = "0.1.0"
description = "Интернет магазин"
authors = ["viktor <viktor-vm@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.6"
pillow = "^10.1.0"
coverage = "^7.3.2"
psycopg2-binary = "2.9.9"
psycopg2 = "2.9.9"
python-dotenv = "1.0.0"
whitenoise = "6.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
